<resources>
    <string name="app_name">FootballFinalSub</string>
    <string name="search">Search</string>
    <string name="matches">Matches</string>
    <string name="teams">Teams</string>
    <string name="favorites">Favorites</string>
    <string name="home_team">Home Team</string>
    <string name="away_team">Away Team</string>
    <string name="default_score">0</string>
    <string name="no_fav_match">No Favorite Match</string>
    <string name="text_tanggal">Sun, 30 Sep 2018</string>
    <string name="text_goals">Goals</string>
    <string name="text_shots">Shots</string>
    <string name="text_lineups">Lineups</string>
    <string name="text_goal_keeper">Goal Keeper</string>
    <string name="text_defense">Defense</string>
    <string name="text_midfield">Midfield</string>
    <string name="text_forward">Forward</string>
    <string name="text_substitutes">Substitutes</string>
    <string name="text_vs">VS</string>
    <string name="tv_hour">22:00</string>
    <string name="match_detail">Match Detail</string>
    <string name="weight_kg">Weight (Kg)</string>
    <string name="height_m">Height (m)</string>
    <string name="text_posisi">Forward</string>
    <string name="next">Next</string>
    <string name="last">Last</string>
    <string name="no_favorite">No Favorite</string>
    <string name="no_fav_team">No Favorite Team</string>

    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>
    <array name="id_league">
        <item>4328</item>
        <item>4329</item>
        <item>4331</item>
        <item>4332</item>
        <item>4334</item>
        <item>4335</item>
    </array>
</resources>
