<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardCornerRadius="3dp"
        app:cardElevation="0dp"
        android:layout_marginTop="8dp">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

        <TextView
                android:id="@+id/tv_tanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_tanggal"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>

        <TextView
                android:text="@string/tv_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@id/tv_tanggal"
                android:id="@+id/tv_hour" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"/>
        <TextView
                android:id="@+id/tv_home_team"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/home_team"
                android:textAlignment="textEnd"
                app:layout_constraintTop_toBottomOf="@id/tv_hour" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/score_team_home"
                app:layout_constraintStart_toEndOf="@+id/img_home" android:layout_marginStart="8dp"/>


        <TextView
                android:id="@+id/score_team_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:text="@string/default_score"
                android:textStyle="bold"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintEnd_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@id/tv_hour" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>

        <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_vs"
                app:layout_constraintEnd_toStartOf="@+id/score_team_away"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/score_team_home"
                app:layout_constraintTop_toTopOf="@id/score_team_home"
                app:layout_constraintBottom_toBottomOf="@id/score_team_home"/>

        <TextView
                android:id="@+id/score_team_away"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:text="@string/default_score"
                android:textSize="18sp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@id/tv_hour" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"/>

        <TextView
                android:id="@+id/tv_away_team"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/away_team"
                android:textAlignment="textStart"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintTop_toBottomOf="@id/tv_hour"
                app:layout_constraintStart_toEndOf="@+id/score_team_away" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/img_away"/>
        <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/img_home"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_home_team"
                app:layout_constraintBottom_toBottomOf="@+id/tv_home_team"/>
        <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/img_away"
                app:layout_constraintTop_toTopOf="@+id/tv_away_team"
                app:layout_constraintBottom_toBottomOf="@+id/tv_away_team" app:layout_constraintEnd_toEndOf="parent"
        />
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/notification"
                android:id="@+id/img_reminder"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:padding="8dp"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>