<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.detail.detail_match.DetailMatchActivity" android:id="@+id/scrollView">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tv_tanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_tanggal"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"/>

        <TextView
                android:id="@+id/tv_home_team"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/home_team"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/img_home" app:layout_constraintTop_toBottomOf="@+id/img_home"
                app:layout_constraintStart_toStartOf="@+id/img_home" android:layout_marginTop="4dp"/>


        <TextView
                android:id="@+id/score_team_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="36sp"
                android:layout_marginTop="8dp"
                android:text="@string/default_score"
                android:textStyle="bold"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintEnd_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@id/tv_hour" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"/>

        <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_vs"
                app:layout_constraintEnd_toStartOf="@+id/score_team_away"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/score_team_home"
                app:layout_constraintTop_toTopOf="@id/score_team_home"
                app:layout_constraintBottom_toBottomOf="@id/score_team_home"/>

        <TextView
                android:id="@+id/score_team_away"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:text="@string/default_score"
                android:textSize="36sp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@id/tv_hour" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"/>

        <TextView
                android:id="@+id/tv_away_team"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/away_team"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/img_away"
                app:layout_constraintEnd_toEndOf="@+id/img_away"
                app:layout_constraintTop_toBottomOf="@+id/img_away" android:layout_marginTop="4dp"/>
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/img_home"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/score_team_home"
                android:layout_marginEnd="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_hour"
                android:layout_marginTop="8dp"/>
        <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/img_away" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_hour" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/score_team_away"
                android:layout_marginStart="8dp"/>
        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:id="@+id/view" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_home_team"
                android:background="@android:color/darker_gray"/>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal" android:layout_marginTop="4dp"
                      app:layout_constraintTop_toBottomOf="@+id/view"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginEnd="8dp"
                      android:id="@+id/line">

            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/tv_home_goals"/>

            <TextView
                    android:text="@string/text_goals"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:id="@+id/textView2"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="center"/>

            <TextView
                    android:text="TextView"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_away_goals" android:textAlignment="textEnd"/>

        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal" android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/line"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginEnd="8dp"
                      android:id="@+id/line2">

            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:id="@+id/tv_home_shot"/>

            <TextView
                    android:text="@string/text_shots"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:id="@+id/textView3"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="center"/>

            <TextView
                    android:text="TextView"
                    android:layout_weight="10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_away_shot" android:textAlignment="textEnd"/>

        </LinearLayout>

        <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:id="@+id/view2" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/line2"
                android:background="@android:color/darker_gray"/>

        <TextView
                android:text="@string/text_lineups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/view2" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"/>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal" android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/textView4"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginEnd="8dp"
                      android:id="@+id/line3">

            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/tv_home_goal_keeper"/>

            <TextView
                    android:text="@string/text_goal_keeper"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:id="@+id/textView5"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="center"/>

            <TextView
                    android:text="TextView"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_away_goal_keeper" android:textAlignment="textEnd"/>

        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal" android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/line3"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginEnd="8dp"
                      android:id="@+id/line4">

            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/tv_home_def"/>

            <TextView
                    android:text="@string/text_defense"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:id="@+id/textView9"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="center"/>

            <TextView
                    android:text="TextView"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_away_def" android:textAlignment="textEnd"/>

        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal" android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/line4"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginEnd="8dp"
                      android:id="@+id/line5">

            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/tv_home_mid"/>

            <TextView
                    android:text="@string/text_midfield"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:id="@+id/textView7"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="center"/>

            <TextView
                    android:text="TextView"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_away_mid" android:textAlignment="textEnd"/>

        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal" android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/line5"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginEnd="8dp"
                      android:id="@+id/line6">

            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/tv_home_fwd"/>

            <TextView
                    android:text="@string/text_forward"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:id="@+id/textView8"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="center"/>

            <TextView
                    android:text="TextView"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_away_fwd" android:textAlignment="textEnd"/>

        </LinearLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="horizontal" android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/line6"
                      app:layout_constraintStart_toStartOf="parent"
                      android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                      android:layout_marginEnd="8dp"
                      android:id="@+id/line7">

            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/tv_home_subs"/>

            <TextView
                    android:text="@string/text_substitutes"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:id="@+id/textView6"
                    android:textColor="@color/colorPrimary"
                    android:textAlignment="center"/>

            <TextView
                    android:text="TextView"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_away_subs" android:textAlignment="textEnd"/>

        </LinearLayout>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
        <TextView
                android:text="@string/tv_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_hour" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_tanggal"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>