<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.detail.detail_team.players.detail_player.DetailPlayerActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="196dp" app:srcCompat="@drawable/avatar"
            android:id="@+id/img_thumbnail" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/weight_kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/img_thumbnail" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/textView11"/>
    <TextView
            android:text="@string/height_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/img_thumbnail" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_berat" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10" app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="@+id/textView10" android:textSize="18sp"
            android:textColor="@color/colorPrimary"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_tinggi" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11" app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="@+id/textView11" android:textSize="18sp"
            android:textColor="@color/colorPrimary"/>
    <TextView
            android:text="@string/text_posisi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_post" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_berat" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:textColor="@color/colorPrimary" android:textSize="16sp"/>
    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:id="@+id/line" app:layout_constraintTop_toBottomOf="@+id/tv_post"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="4dp"
            android:background="@android:color/darker_gray"/>
    <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_description"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/line" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>